--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
 	margin: 0;
 	padding: 0;
+	background: #333;
+	font-family: Helvetica, sans-serif;
+}
+#header {
 	background: #000;
+	color: #fff;
 }
