--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
 	background: #333;
 	font-family: Helvetica, sans-serif;
 }
+.container {
+	width: 960px;
+	margin: 0 auto;
+}
 #header {
 	background: #000;
 	color: #fff;
