--- a/style.css
+++ b/style.css
@@ -1,14 +1,46 @@
+html {
+	height: 100%;
+}
 body {
+	height: 100%;
 	margin: 0;
 	padding: 0;
-	background: #333;
+	background: #fff;
 	font-family: Helvetica, sans-serif;
 }
+h1,h2,h3,h4,h5,h6 {
+	margin: 0;
+	padding: 0;
+}
 .container {
+	height: 100%;
 	width: 960px;
 	margin: 0 auto;
 }
 #header {
-	background: #000;
+	height: auto;
+	background: #191919;
+	border-bottom: 4px solid #000;
 	color: #fff;
+}
+#header span {
+	display: inline-block;
+	padding: 40px 0;
+}
+#header span h1 {
+	font-weight: 100;
+}
+#work {
+
+}
+#work .container div {
+	width: 225px;
+	height: 225px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	background: black;
+	float:left;
+}
+#work .container div:nth-child(4) {
+	margin-right: 0;
 }
