--- a/adventure/style.css
+++ b/adventure/style.css
@@ -5,17 +5,41 @@ body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	background: #fff;
+	background: #000;
 	font-family: Helvetica, sans-serif;
 }
 h1,h2,h3,h4,h5,h6 {
 	margin: 0;
 	padding: 0;
 }
+#page-container {
+	height: auto;
+	width: auto;
+}
 .container {
 	height: 100%;
 	width: 960px;
 	margin: 0 auto;
+}
+#scroll-position {
+	position: fixed;
+	font-size: 5em;
+	color: rgba(255,255,255,0.8);
+	top: 0;
+	left: 0;
+	z-index: 9;
+	color: white;
+}
+#man {
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+	background: black;
+	position: fixed;
+	bottom: -1000px;
+	left:50%;
+	margin-left: -50px;
+	z-index: 5;
 }
 #mountain {
 	position: fixed;
@@ -23,17 +47,29 @@ h1,h2,h3,h4,h5,h6 {
 	background-size: 100% auto;
 	width: 100%;
 	height: 900px;
+	top: 0;
 	z-index: 1;
 }
 #fade-to-black {
 	position: fixed;
 	height: 100%;
 	width: 100%;
-	background: #000;
+	background: #0d1520;
 	z-index: 2;
 }
 #falling {
 	height: 9000px;
 	width: 100%;
 	background: red;
+}
+#falling2 {
+	height: 8000px;
+	width: 100%;
+	background: red;
+	z-index: 3;
+}
+#darkness {
+	height: 1000px;
+	width: 100%;
+	background: black;
 }
