--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 #work .container div {
 	width: 225px;
-	height: 225px;
+	min-height: 200px;
 	margin-right: 20px;
 	margin-bottom: 20px;
 	background: black;
@@ -43,4 +43,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 #work .container div:nth-child(4) {
 	margin-right: 0;
+}
+#work .container div img {
+	width: 100%;
 }
