--- a/jacob/style.css
+++ b/jacob/style.css
@@ -155,7 +155,7 @@ div#bio-picture {
 #map {
 	background: url('images/map.png') no-repeat top center;
 	width: 100%;
-	height: 300px;
+	height: 360px;
 	position: relative;
 }
 .blip {
@@ -221,7 +221,7 @@ div#bio-picture {
 
 #timeline {
 	background: #fff;
-	padding-bottom: 122px;
+	padding-bottom: 0;
 }
 #timeline h1 {
 	font-size: 3.8em;
