--- a/jacob/style.css
+++ b/jacob/style.css
@@ -92,7 +92,7 @@ a.tweet-it:hover {
 	padding-top: 22px;
 }
 
-#more-bg {
+#good-bg {
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -109,6 +109,7 @@ a.tweet-it:hover {
 }
 #bio {
 	padding: 40px 0;
+	min-width: 960px;
 }
 #bio-inner > div {
 	position: relative;
@@ -142,6 +143,7 @@ div#bio-picture {
 	border-bottom: 1px solid #000;
 	background: #111;
 	color: #fff;
+	overflow: hidden;
 }
 #akqa-inner {
 	font-size: 1.5em;
@@ -173,6 +175,7 @@ div#bio-picture {
 	background-color: #a11;
 }
 	.blip.sanf {
+		background: #3FA1FF;
 		left: 143px;
 		top: 188px;
 	}
@@ -221,6 +224,7 @@ div#bio-picture {
 
 #timeline {
 	background: #fff;
+	min-width: 960px;
 	padding-bottom: 0;
 }
 #timeline h1 {
@@ -286,4 +290,102 @@ div#bio-picture {
 }
 #good {
 	margin-top: 40px;
+}
+
+
+/* MOBILE */
+
+@media only screen and (min-device-width:320px) and (max-device-width:668px) { 
+	a.tweet-it {
+		display: block;
+		background: #333 url('images/tweet-bw.png') no-repeat 20px bottom;
+		position: static;
+		width: auto;
+		color: #fff;
+		padding:0 0 0 80px;
+		line-height: 32px;
+		border-radius: 0;
+		cursor: pointer;
+		white-space: normal;
+		color: #ccc;
+	}
+	a.tweet-it:hover {
+		background-position: 20px top;
+		color: #fff;
+	}
+	#good-bg {
+		display: none;
+	}
+	.container {
+		width: auto;
+		margin: 0 20px;
+	}
+	#header {
+		width: 100%;
+		min-width: 0;
+	}
+	#bio {
+		width: 100%;
+		min-width: 0;
+	}
+	#bio-inner > div {
+		position: relative;
+		width: auto;
+		margin: 50px 0;
+		margin-right: 0;
+	}
+	#bio-inner > div span {
+		position: static;
+		display: block;
+		right: 0;
+		margin-right: 0;
+		width: auto;
+		text-align: left;
+	}
+	div#bio-picture {
+		position: static;
+		left: 0;
+		right: 0;
+		width: 100%;
+	}
+	#akqa {
+		width: 100%;
+		min-width: 0;
+	}
+	#akqa-inner {
+		width: auto;
+		margin: 0 20px;
+		font-size: 1.3em;
+	}
+	#timeline {
+		width: 100%;
+		min-width: 0;
+	}
+	#timeline h1 {
+		width: 100%;
+		min-width: 0;
+	}
+
+	.vertical-line {
+		display: none;
+	}
+	.line {
+		height: auto;
+		min-height: 240px;
+		width: 100%;
+		margin-left: 0;
+		margin-top: 40px;
+		position: relative;
+		text-align: center;
+	}
+	.corp-box {
+		position: static;
+		right: 0;
+		margin-right: 0;
+		width: 100%;
+		text-align: center;
+	}
+	.blip {
+		display: none;
+	}
 }
