--- a/jacob/style.css
+++ b/jacob/style.css
@@ -107,6 +107,12 @@ a.tweet-it:hover {
 	color: #000;
 	min-width: 960px;
 }
+.social-links {
+	margin-top: 40px;
+}
+.social-links a {
+	margin: 0 20px;
+}
 #bio {
 	padding: 40px 0;
 	min-width: 960px;
@@ -289,9 +295,20 @@ div#bio-picture {
 	padding-top: 40px;
 }
 #good {
-	margin-top: 40px;
+	margin-top: 50px;
 }
-
+#good h1 {
+	font-size: 3em;
+	text-align: center;
+}
+#video {
+	text-align: center;
+}
+#vid-desc {
+	padding: 70px 0;
+	font-size: 1.3em;
+	text-align: center;
+}
 
 /* MOBILE */
 
