--- a/jacob/style.css
+++ b/jacob/style.css
@@ -345,6 +345,9 @@ div#bio-picture {
 }
 
 /* MOBILE */
+#video-mobile {
+	display: none;
+}
 
 @media only screen and (min-device-width:320px) and (max-device-width:668px) { 
 	a.tweet-it {
@@ -446,6 +449,12 @@ div#bio-picture {
 	}
 	#map {
 		display: none;
+	}
+	#video {
+		display: none;
+	}
+	#video-mobile {
+		display: block;
 	}
 
 }
