--- a/adventure/css.css
+++ b/adventure/css.css
@@ -12,7 +12,14 @@ h1,h2,h3,h4,h5,h6 {
 	margin: 0;
 	padding: 0;
 }
+#banner {
+	padding: 300px 0;
+	text-align: center;
+	background: #333;
+	color: #fff;
+}
 .box {
 	width: 500px;
 	margin: 0 auto;
+	padding: 40px 0;
 }
