--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,13 @@
-html {
-	height: 100%;
-}
-body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	background: #fff;
-	font-family: Helvetica, sans-serif;
-}
-h1,h2,h3,h4,h5,h6 {
-	margin: 0;
-	padding: 0;
-}
-.container {
-	height: 100%;
-	width: 960px;
-	margin: 0 auto;
-}
 #header {
 	height: auto;
 	background: #191919;
 	border-bottom: 4px solid #000;
 	color: #fff;
-}
-#header span {
-	display: inline-block;
 	padding: 40px 0;
 }
-#header span h1 {
-	font-weight: 100;
+#header h1 {
+	text-align: center;
+	font-family: "jaf-facitweb",sans-serif;
 }
 #work {
 
