--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+font-family: "jaf-facitweb",sans-serif;
+}
 #header {
 	height: auto;
 	background: #191919;
@@ -7,7 +10,6 @@
 }
 #header h1 {
 	text-align: center;
-	font-family: "jaf-facitweb",sans-serif;
 }
 #work {
 
