--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,99 @@
 body {
 	background: #f1f1f1;
 }
+/*#logo {
+	position: relative;
+	height: 153px;
+	width: 270px;
+	margin: 0 auto;
+}
+#square {
+	position: absolute;
+	left: 28px;
+	width: 90px;
+	height: 103px;
+	background: #fff;
+	transform: skew(-27deg);
+	-webkit-transform: skew(-27deg);
+}
+#triangle1 {
+	position: absolute;
+	left: 108px;
+	width: 0;
+	height: 0;
+	border-left: 40px solid transparent;
+	border-right: 40px solid transparent;
+	border-bottom: 80px solid white;
+}
+#triangle2 {
+	position: absolute;
+	left: 162px;
+	top: 19px;
+	width: 0;
+	height: 0;
+	border-left: 30px solid transparent;
+	border-right: 30px solid transparent;
+	border-top: 60px solid white;
+}
+#triangle3 {
+	position: absolute;
+	left: 206px;
+	top: 20px;
+	width: 0;
+	height: 0;
+	border-left: 20px solid transparent;
+	border-right: 20px solid transparent;
+	border-bottom: 40px solid white;
+}*/
 #header {
 	height: auto;
-	background: #232323;
-	border-bottom: 2px solid #000;
-	color: #fff;
-	padding: 140px 0;
+	background: #f1f1f1;
+	border-bottom: 1px solid #333;
+	color: #333;
+	padding: 40px 0 50px;
 
 	text-align: center;
 }
 #header h1 {
 	font-size: 3.9em;
-	font-family: "jaf-facitweb",sans-serif;
-	color: #fff;
-	text-shadow: 1px 1px rgba(0,0,0,0.1);
+	font-family: Montserrat,sans-serif;
+	font-weight: bold;
+	color: rgb(55,55,55);
+
+	-webkit-transition: color .4s ease-in-out;
+}
+#header h1:hover {
+	color: rgb(88,120,200);
+}
+#header h3 {
+	font-family: Montserrat,sans-serif;
+	text-transform: uppercase;
+	font-size:1.4em;
 }
 #work {
-
+	padding: 40px 0;
+	border-top: 1px solid #888;
+	background: #222;
 }
-#work .container div {
-	width: 225px;
-	min-height: 200px;
-	margin-right: 20px;
+.row {
 	margin-bottom: 20px;
-	background: black;
-	float:left;
 }
-#work .container div:nth-child(4) {
+.box {
+	width: 100%;
+	height: 200px;
+	background: #999;
+	float:left;
+	opacity: 0.5;
+	  -webkit-transition: opacity .4s ease-in-out;
+	  -moz-transition: opacity .4s ease-in-out;
+	  -ms-transition: opacity .4s ease-in-out;
+	  -o-transition: opacity .4s ease-in-out;
+	  transition: opacity .4s ease-in-out;
+}
+.box:hover {
+	opacity: 1;
+}
+.box:nth-child(4) {
 	margin-right: 0;
 }
 #work .container div img {
