--- a/music/style.css
+++ b/music/style.css
@@ -15,6 +15,14 @@ h1 {
 	font-size: 38px;
 	margin-top: 0;
 	font-weight: 100;
+	color: #77a0ff;
+}
+h3 {
+	color: #77a0ff;
+	font-weight: 100;
+}
+a {
+	color: #ff698a;
 }
 .fixedbg {
 	position: fixed;
@@ -35,7 +43,7 @@ h1 {
 	margin: 0 auto;
 }
 .top {
-	background: #212121;
+	background: #111;
 	color: white;
 	padding: 80px 0;
 }
