--- a/music/style.css
+++ b/music/style.css
@@ -73,6 +73,11 @@ a {
 		width: 90%;
 	}
 }
+@media all and (max-width: 568px) {
+	.container {
+		width: 100%;
+	}
+}
 .col {
 	font-size: 16px;
 	width: 400px;
